# bank2invoice

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: cli.py  config.py  db.py  main.py  models.py
app/auth/: deps.py  passwords.py  sessions.py
app/invoice/: generate.py  latex_escape.py  numerotation.py  render.py
app/invoice/templates/: facture_footer.tex.j2  facture_header.tex.j2  facture_main.tex.j2
app/llm/: base.py  factory.py  ollama.py  stub.py
app/pipeline/: detect_banque.py  emetteur.py  extract_pdf.py  filter_entrants.py  ingest.py  ingest_cli.py  inspect_cli.py  match_client.py  parse_ca.py  parse_cli.py  parse_sg.py  validate.py
app/routers/: auth.py  clients.py  factures.py  profil.py  releves.py  transactions.py
app/templates/: base.html
app/templates/auth/: _layout.html  login.html  register.html
app/templates/clients/: _form.html  list.html
app/templates/factures/: _generation_result.html  list.html
app/templates/profil/: _tva_badge.html  view.html
app/templates/releves/: detail.html  list.html
app/templates/transactions/: _panel.html  _row.html  _table.html
data/pdfs/: .gitkeep
tests/: test_invoice_render.py  test_lot2.py  test_parse_ca.py
